What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

March 20, 2011
+ [antonin] added a 'thirdparty' directory to include main source files of libtiff, libpng, libz and liblcms to enable support of these formats in the codec executables. CMake will try to statically build these libraries if they are not found on the system. Note that these third party libraries are not required to build libopenjpeg (which has no dependencies).
- [antonin] removed the 'libs' directory containing win32 compiled versions of libpng, libtiff and liblcms. 

March 10, 2011
* [antonin] fixed lt_version in configure.ac

March 5, 2011
! [antonin] cosmetic change for status report of ./configure

March 4, 2011
* [antonin] now assume MinGW does not have dirent.h (actually have it but without opendir function). Fixed also a WIN32 check in jp3d/libjp3dvm/openjpeg3d.h.
! [antonin] updated autotools files to improve build and install procedures (credit to Vincent Torri).

February 17, 2011
* [antonin] replaced 'long' by 'size_t' in dwt.c to be sure to cast to a pointer size.
* [antonin] now allows 16-bit precision for mj2 encoding and decoding (solves Issue 49 and Issue 63). Credit to Winfried.

February 9, 2011
! [antonin] renamed "java sources" to "java-sources" to avoid blank space
- [antonin] removed opj_config.h.in from svn, as it is automaticaly generated by autoheader when calling ./bootstrap.sh

February 6, 2011
* [antonin] cmake : fixed installed links to openjpeg.h and openjpeg3d.h.

January 30, 2011
* [antonin] fixed warnings in jp2.c (signed compared to unsigned) and dwt.c (bad cast)
- [antonin] removed depcomp file from trunk (automatically copied by automake in main folder)

January 29, 2011
* [antonin] removed 'é' in license header to prevent warning C4819 (see Issue 57).

January 24, 2011
- [antonin] remove more obsolete VS files. Left only mj2_to_metadata VS files, as this is the only executable not yet handled by CMake.

January 23, 2011