@@ -279,7 +279,7 @@ IF(UNIX OR CYGWIN)
  SET(CMAKE_LIBRARY_PATH /usr/lib /usr/local/lib /opt/lib /opt/local/lib)
 ENDIF()
 #
- FIND_PACKAGE(ZLIB QUIET)
+ FIND_PACKAGE(ZLIB)
 #
  IF(ZLIB_LIBRARY STREQUAL "ZLIB_LIBRARY-NOTFOUND")
    SET(ZLIB_FOUND 0)
@@ -292,7 +292,7 @@ ENDIF()
    SET(Z_INCLUDE_DIRNAME ${ZLIB_INCLUDE_DIR}) 
  ENDIF(ZLIB_FOUND)
 #
- FIND_PACKAGE(PNG QUIET)
+ FIND_PACKAGE(PNG)
 #
  IF(PNG_LIBRARY STREQUAL "PNG_LIBRARY-NOTFOUND")
    SET(PNG_FOUND 0)
@@ -305,7 +305,7 @@ ENDIF()
    SET(PNG_INCLUDE_DIRNAME ${PNG_INCLUDE_DIR})
  ENDIF(PNG_FOUND)
 #
- FIND_PACKAGE(TIFF QUIET)
+ FIND_PACKAGE(TIFF)
 #
  IF(TIFF_LIBRARY STREQUAL "TIFF_LIBRARY-NOTFOUND")
    SET(TIFF_FOUND 0)
@@ -318,36 +318,32 @@ ENDIF()
    SET(TIFF_INCLUDE_DIRNAME ${TIFF_INCLUDE_DIR})
  ENDIF(TIFF_FOUND)
 #
- FIND_PACKAGE(LCMS QUIET)
+ SET(LCMS12_MISSING 1)
+ INCLUDE(thirdparty/FindLCMS2.cmake OPTIONAL)
 #
- IF(LCMS_LIBRARY STREQUAL "LCMS_LIBRARY-NOTFOUND")
-  SET(LCMS_FOUND 0)
- ENDIF(LCMS_LIBRARY STREQUAL "LCMS_LIBRARY-NOTFOUND") 
+ IF(LCMS2_FOUND)
+  SET(LCMS12_MISSING 0)
+  SET(HAVE_LCMS2_H 1)
+  SET(HAVE_LCMS2_LIB 1)
+  SET(LCMS_LIBNAME ${LCMS2_LIBRARY})
+  SET(LCMS_INCLUDE_DIRNAME ${LCMS2_INCLUDE_DIR})
+ ENDIF(LCMS2_FOUND)
 #
- IF(LCMS_FOUND)
-  SET(HAVE_LCMS1_H 1)
-  SET(HAVE_LCMS1_LIB 1)
-  SET(LCMS_LIBNAME ${LCMS_LIBRARIES})
-  SET(LCMS_INCLUDE_DIRNAME ${LCMS_INCLUDE_DIR})
- ENDIF(LCMS_FOUND)
+ IF(NOT LCMS2_FOUND)
+  INCLUDE(thirdparty/FindLCMS.cmake OPTIONAL)
 #
- IF(NOT LCMS_FOUND)
-  FIND_PACKAGE(LCMS2 QUIET)
-   IF(LCMS2_LIBRARY STREQUAL "LCMS2_LIBRARY-NOTFOUND")
-    SET(LCMS2_FOUND 0)
-  ENDIF(LCMS2_LIBRARY STREQUAL "LCMS2_LIBRARY-NOTFOUND")
-#
-  IF(LCMS2_FOUND)
-   SET(HAVE_LCMS2_H 1)
-    SET(HAVE_LCMS2_LIB 1)
-    SET(LCMS_LIBNAME ${LCMS2_LIBRARIES})
-    SET(LCMS_INCLUDE_DIRNAME ${LCMS2_INCLUDE_DIR})
-  ENDIF(LCMS2_FOUND)
- ENDIF(NOT LCMS_FOUND)
+  IF(LCMS_FOUND)
+   SET(LCMS12_MISSING 0)
+   SET(HAVE_LCMS_H 1)
+    SET(HAVE_LCMS_LIB 1)
+    SET(LCMS_LIBNAME ${LCMS_LIBRARRY} )
+    SET(LCMS_INCLUDE_DIRNAME ${LCMS_INCLUDE_DIR})
+  ENDIF(LCMS_FOUND)
+ ENDIF(NOT LCMS2_FOUND)
 #-------------------------------------------------------------
  OPTION(BUILD_THIRDPARTY "Build the thirdparty executables" ON)
 #
- IF(NOT ZLIB_FOUND OR NOT PNG_FOUND OR NOT TIFF_FOUND OR (NOT LCMS_FOUND AND NOT LCMS2_FOUND)) 
+ IF(NOT ZLIB_FOUND OR NOT PNG_FOUND OR NOT TIFF_FOUND OR LCMS12_MISSING) 
   IF(BUILD_THIRDPARTY)
    SET(HAVE_ZLIB_H 1)
    SET(HAVE_LIBZ 1)
@@ -388,7 +384,7 @@ ENDIF()
    ENDIF(NOT TIFF_FOUND)
 #
   ENDIF(BUILD_THIRDPARTY)
- ENDIF(NOT ZLIB_FOUND OR NOT PNG_FOUND OR NOT TIFF_FOUND OR (NOT LCMS_FOUND AND NOT LCMS2_FOUND))
+ ENDIF(NOT ZLIB_FOUND OR NOT PNG_FOUND OR NOT TIFF_FOUND OR LCMS12_MISSING)
 #
 ENDIF(BUILD_CODEC OR BUILD_JPWL OR BUILD_MJ2)
 #
